--- a/src/qt/deviant/settings/forms/settingsfaqwidget.ui
+++ b/src/qt/deviant/settings/forms/settingsfaqwidget.ui
@@ -342,7 +342,7 @@
                   <enum>Qt::NoFocus</enum>
                  </property>
                  <property name="text">
-                  <string>https://dev.io/</string>
+                  <string>https://deviantcoin.io/</string>
                  </property>
                 </widget>
                </item>
@@ -424,8 +424,8 @@
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>642</width>
-                  <height>1614</height>
+                  <width>643</width>
+                  <height>1620</height>
                  </rect>
                 </property>
                 <property name="autoFillBackground">
@@ -818,7 +818,7 @@
                          <string>
                            &lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;justify&quot;&gt;
                            We have support channels in most of our official chat groups, for example
-                           &lt;a style='color: #9c7019' href='https://discord.dev.io'&gt;
+                           &lt;a style='color: #9c7019' href='https://discord.com/invite/Gp9zMXc'&gt;
                            #support in our Discord&lt;/a&gt;.
                            &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
                          </string>
