--- a/src/qt/deviant.qrc
+++ b/src/qt/deviant.qrc
@@ -10,6 +10,9 @@
         <file alias="ic-transaction-staked">res/icons/ic-transaction-staked.svg</file>
         <file alias="lock_closed">res/icons/lock_closed.png</file>
         <file alias="lock_open">res/icons/lock_open.png</file>
+        <file alias="tx_input">res/icons/tx_input.png</file>
+        <file alias="tx_output">res/icons/tx_output.png</file>
+        <file alias="tx_inout">res/icons/tx_inout.png</file>
     </qresource>
     <qresource prefix="/css">
         <file>res/css/default.css</file>
